boulder/boulder/tests/compile_fail/hir/assignment.ty.bo
# Mismatched types
# `u32`
# `u16`
# (6:
fn assignment(a: u32) -> u32 {
    let b: u16 = a + 1;
    a
}